fixed some css spacing on index

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -60,7 +60,7 @@ body{
 .introduction, .about-me{
   display: none;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 40px;
 
   #avatar{
     text-align: center;
@@ -227,7 +227,7 @@ body{
 
   .project-container{
     margin-top: 130px;
-    display: none;
+    //display: none;
       .project-wrap{
           display: table;
           margin: 0 auto;
